name:                pyramids
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/oatberry/pyramids#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Berryhill
maintainer:          oats@oatberry.me
copyright:           2018 Thomas Berryhill
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable pyramids
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
